Fixed alignment of centered-text-blue on mobile

--- a/assets/css/styles-index.css
+++ b/assets/css/styles-index.css
@@ -22,7 +22,7 @@ body {
   }
 }
 
-#centered-text {
+#centered-text-blue {
   position: relative;
   left: 50%;
   transform: translate(-50%, 25%);
